Updated controllers, policies and swagger API documentations for documents and technical systems
